<resources>
    <string name="app_name">MovieApp</string>
    <string name="main_activity_title">MOVIE APP!</string>
    <string name="main_activity_description">Click on the button to get a list of the 20 most popular movies</string>
    <string name="main_activity_button">Show movies</string>
    <string name="main_activity_image_content_description">Popcorn background image</string>

    <string name="card_id">ID: %1$s</string>
    <string name="card_title">%1$s</string>
    <string name="card_release_date">RELEASE DATE: %1$s</string>
    <string name="card_vote_average">★ %1$s</string>
    <string name="card_poster">https://image.tmdb.org/t/p/original%1$s</string>

    <string name="item_recycler_content_description">Movie poster</string>

    <string name="movies_activity_title">Popular Movies</string>
    <string name="movies_activity_back_button">Back</string>
    <string name="movies_activity_error_message">Sorry! No films to show</string>

    <string name="error_dialog_fragment_title">Error</string>
    <string name="error_dialog_fragment_button_ok">OK</string>
    <string name="error_dialog_fragment_error_message">An error occurred, please try again later.</string>
    <string name="main_activity_dialog_button">Show dialog Error</string>

</resources>