<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvmcleanapp.presentation.activity.MoviesActivity">

    <TextView
        android:id="@+id/main_activity_title"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movies_activity_title"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies_activity_title"
        app:layout_constraintTop_toBottomOf="@id/main_activity_title" />

    <Button
        android:id="@+id/movies_activity_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/movies_activity_back_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/movie_activity_error_message"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies_activity_error_message"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/movies_activity_back_button"
        app:layout_constraintTop_toBottomOf="@id/movies_activity_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/movies_activity_back_button"
        app:layout_constraintTop_toBottomOf="@id/movies_activity_title" />

</androidx.constraintlayout.widget.ConstraintLayout>